--- a/detail.html
+++ b/detail.html
@@ -330,6 +330,11 @@
 
         /* Amber */
 
+        .day.love-day {
+            background-color: #F3E5F5;
+            color: #9C27B0;
+        }
+
         .tag-love {
             background: #F3E5F5;
             color: #9C27B0;
@@ -623,7 +628,7 @@
                 <div class="legend-dot ovulation-day"></div>排卵日
             </div>
             <div class="legend-item">
-                <span style="font-size: 12px; margin-right: 4px;">💜</span>爱爱
+                <span style="font-size: 12px; margin-right: 4px;">❤️</span>爱爱
             </div>
         </div>
     </div>
@@ -637,7 +642,7 @@
             <i>😊</i> 记心情
         </button>
         <button class="btn btn-love" onclick="openTodayDetails()">
-            <i>💜</i> 记爱爱
+            <i>❤️</i> 记爱爱
         </button>
     </div>
 
@@ -919,12 +924,23 @@
                             }
                             if (details.isLove === true || (details.loveMeasure !== undefined && details.loveMeasure !== null) || details.loveTime) {
                                 const loveIcon = document.createElement('div');
-                                loveIcon.textContent = '💜';
+                                loveIcon.textContent = '❤️';
                                 loveIcon.style.position = 'absolute';
                                 loveIcon.style.right = '0px';
                                 loveIcon.style.top = '0px';
                                 loveIcon.style.fontSize = '8px';
                                 el.appendChild(loveIcon);
+                            }
+                            
+                            // Check if Love ONLY (no Period)
+                            // Period keys: flow, pain, color
+                            // If NO period keys AND has love -> .love-day
+                            const hasPeriod = details.flow || (details.pain && details.pain != 0) || details.color;
+                            if (!hasPeriod && (details.isLove === true || (details.loveMeasure !== undefined && details.loveMeasure !== null) || details.loveTime)) {
+                                el.classList.remove('period'); // Remove default period class if added by simple check
+                                el.classList.remove('period-single');
+                                el.classList.add('love-day');
+                                el.classList.add('period-single'); // Keep round shape
                             }
                         } catch (e) { }
                     }
@@ -1199,7 +1215,7 @@
                     if (d.isLove === true || (d.loveMeasure !== undefined && d.loveMeasure !== null)) {
                         let measure = (d.loveMeasure !== undefined && d.loveMeasure !== null) ? MAP_LOVE_MEASURE[d.loveMeasure] : "爱爱";
                         if (d.loveTime) measure += ` ${d.loveTime}`;
-                        tagsHtml += `<span class="tag tag-love">💜 ${measure}</span>`;
+                        tagsHtml += `<span class="tag tag-love">❤️ ${measure}</span>`;
                     }
                 } catch (e) { }
 
