--- a/detail.html
+++ b/detail.html
@@ -913,11 +913,27 @@
 
                 // Priority: Actual Log > Ovulation > Predicted
                 if (log) {
-                    el.classList.add('period');
-                    el.classList.add('period-single');
                     if (log.signUpId) {
                         try {
                             const details = JSON.parse(log.signUpId);
+
+                            // 1. Period Logic
+                            // Use explicit isPeriod flag if available, otherwise heuristic (presence of period data)
+                            let isPeriod = details.isPeriod;
+                            if (isPeriod === undefined) {
+                                // Legacy heuristic: if flow/pain/color exist OR if love/mood don't exist (legacy simple log)
+                                const hasPeriodData = details.flow || (details.pain && details.pain != 0) || details.color;
+                                const hasOtherData = details.isLove || details.mood;
+                                // If plain {}, assume period. If has data but not period keys, assume not period.
+                                if (!hasPeriodData && hasOtherData) isPeriod = false;
+                                else isPeriod = true;
+                            }
+
+                            if (isPeriod) {
+                                el.classList.add('period');
+                                el.classList.add('period-single');
+                            }
+
                             if (details.mood) {
                                 const dot = createDiv('item-dot dot-mood');
                                 el.appendChild(dot);
@@ -931,7 +947,7 @@
                                 loveIcon.style.fontSize = '8px';
                                 el.appendChild(loveIcon);
                             }
-                            
+
                             // Check if Love ONLY (no Period)
                             // Period keys: flow, pain, color
                             // If NO period keys AND has love -> .love-day
@@ -942,7 +958,15 @@
                                 el.classList.add('love-day');
                                 el.classList.add('period-single'); // Keep round shape
                             }
-                        } catch (e) { }
+                        } catch (e) {
+                            // Parse error or empty, treat as Period for compatibility
+                            el.classList.add('period');
+                            el.classList.add('period-single');
+                        }
+                    } else {
+                        // Empty signUpId -> Legacy simple period log
+                        el.classList.add('period');
+                        el.classList.add('period-single');
                     }
                 } else if (peakOvulationDates.has(dateStr)) {
                     el.classList.add('ovulation-day');
@@ -1042,9 +1066,16 @@
                         // If none of these exist, AND love exists, maybe Period is OFF?
                         // But "Period" is also just a flag.
                         // Let's rely on presence of Period-specific data OR if it's a legacy Simple Checkin (empty json or just mood).
-                        const hasPeriodData = d.flow || d.pain || d.color;
-                        if (isLove && !hasPeriodData) {
-                            isPeriod = false;
+                        // Legacy/Hybrid Logic for toggles
+                        // If explicit isPeriod present, use it.
+                        if (d.isPeriod !== undefined) {
+                            isPeriod = d.isPeriod;
+                        } else {
+                            // Fallback: If hasPeriodData is false AND Love is true, assume Period OFF.
+                            const hasPeriodData = d.flow || d.pain || d.color;
+                            if (isLove && !hasPeriodData) {
+                                isPeriod = false;
+                            }
                         }
 
                     } catch (e) { }
@@ -1109,6 +1140,8 @@
             } else if (isPeriod || isLove) {
                 // Save / Update
                 const data = {
+                    isPeriod: isPeriod, // Explicitly save flag
+
                     flow: isPeriod ? getSelectorVal('flowSelector') : null,
                     pain: isPeriod ? getSelectorVal('painSelector') : null,
                     color: isPeriod ? getSelectorVal('colorSelector') : null,
